Bug 499475 - "Hide launchers after application startup" setting only applied after "Ok", not after "Apply" (Icons and Text TM)
Summary: "Hide launchers after application startup" setting only applied after "Ok", n...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 6.2.5
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-03 18:27 UTC by Ilya Bizyaev
Modified: 2025-02-03 22:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya Bizyaev 2025-02-03 18:27:45 UTC
STEPS TO REPRODUCE
1. Have one of the open windows pinned to the “icons and text” task manager widget.
2. Go to the widget's settings, change the value of Behavior > “Hide launchers after application startup”.
3. Click “Apply”.

OBSERVED RESULT
Nothing happens until you click “Ok” to close the dialog.

EXPECTED RESULT
The change is applied by the “Apply” button.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250121
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Kernel Version: 6.12.10-1-default (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Nicolas Fella 2025-02-03 20:35:12 UTC
I can reproduce. It's weird though since other settings do take effect on Apply
Comment 2 Bug Janitor Service 2025-02-03 21:28:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5155
Comment 3 Nicolas Fella 2025-02-03 22:29:38 UTC
Git commit b46e6f1495ded7ec09b84142ca295bb55a1585d9 by Nicolas Fella.
Committed on 03/02/2025 at 21:26.
Pushed by nicolasfella into branch 'master'.

[libtaskmanager] Invalidate filter after changing hideActivatedLaunchers

We change the data the filtering is based on, so we need to reevaluate
the filtering

M  +1    -0    libtaskmanager/tasksmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b46e6f1495ded7ec09b84142ca295bb55a1585d9
Comment 4 Nicolas Fella 2025-02-03 22:30:10 UTC
Git commit 635c000acaa8e559e98366107891ff9e85ceb62d by Nicolas Fella.
Committed on 03/02/2025 at 22:30.
Pushed by nicolasfella into branch 'Plasma/6.3'.

[libtaskmanager] Invalidate filter after changing hideActivatedLaunchers

We change the data the filtering is based on, so we need to reevaluate
the filtering
(cherry picked from commit b46e6f1495ded7ec09b84142ca295bb55a1585d9)

M  +1    -0    libtaskmanager/tasksmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/635c000acaa8e559e98366107891ff9e85ceb62d