[libtaskmanager] Invalidate filter after changing hideActivatedLaunchers

We change the data the filtering is based on, so we need to reevaluate
the filtering

BUG: 499475
(cherry picked from commit b46e6f1495ded7ec09b84142ca295bb55a1585d9)